--- a/css/style-error.css
+++ b/css/style-error.css
@@ -1,22 +1,22 @@
-(tml{font-size:90%;} 
-@media(min-width:60em){html{font-size: 120%}}
+(tml{font-size:0.9em;} 
+/* @media(min-width:60em){html{font-size: 120%}} */
 
 body{font-size:16px;background-color: #c2c4d8; }
 
 #content {width:80%;margin:0 auto;border:0.1 solid black;padding:2em;box-shadow: 0 0.5em 1em 0 rgba(0,0,0,0.2);background-color: white;  }
 
 h4 {margin:2em 0 2Sem 0;text-align:center; padding:0;
-            font-size:200%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-size:2em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:italic; line-height:1.2em;}
 
 h6 {margin:0 0 0.5em 0;padding:0.5em;
-            font-size:100%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-size:1em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:italic; line-height:1.2em;
 			margin-left:2.4em;
 			background:black;color:white;}
 
 p {margin:0 0 0 2em;text-align:center; padding:0 0;
-            font-size:120%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-size:1.2em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:normal;line-height:2.5em;
 			text-align: justify;
 			text-justify: inter-word;
@@ -24,4 +24,4 @@ p {margin:0 0 0 2em;text-align:center; padding:0 0;
 
 ul {list-style-type:square;margin:0 5em 2em 0;line-height:300%;}
 
-ul li {font-size:120%;font-family: Consolas, Georgia, "Times New Roman", Times, serif;margin-left:3.2em;}
+ul li {font-size:1.2em;font-family: Consolas, Georgia, "Times New Roman", Times, serif;margin-left:3.2em;}
