--- a/css/style-wijaslides.css
+++ b/css/style-wijaslides.css
@@ -171,7 +171,7 @@
         border-radius: 0.5em;
 		max-width:22.5em;
 		min-height:13.9em;
-		font-size:90%;
+		font-size:0.9em;
 		font-family: Consolas, Georgia, "Times New Roman", Times, serif;
         line-height:1.5em;
 		box-shadow:inset 0px 0px 30px dodgerblue;
@@ -180,7 +180,7 @@
 p em{font-style:normal;color:blue;}
 
 
-.popBox a{font-size:125%;text-decoration:underline;color:blue;margin:1.2em 0 0 0;cursor:pointer;}
+.popBox a{font-size:1.25em;text-decoration:underline;color:blue;margin:1.2em 0 0 0;cursor:pointer;}
 
 .popBox p a{
 			margin:0 0 0 0;text-align:center; padding:0 0;
