--- a/css/style-error.css
+++ b/css/style-error.css
@@ -1,4 +1,4 @@
-(tml{font-size:0.9em;} 
+html{font-size:0.9em;} 
 /* @media(min-width:60em){html{font-size: 120%}} */
 
 body{font-size:16px;background-color: #c2c4d8; }
@@ -22,6 +22,6 @@ p {margin:0 0 0 2em;text-align:center; padding:0 0;
 			text-justify: inter-word;
 			}
 
-ul {list-style-type:square;margin:0 5em 2em 0;line-height:300%;}
+ul {list-style-type:square;margin:0 5em 2em 0;line-height:3em;}
 
 ul li {font-size:1.2em;font-family: Consolas, Georgia, "Times New Roman", Times, serif;margin-left:3.2em;}
