--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ a:link {color:black}
 
 a:visited {color:black}
 
-ul {list-style-type:none;padding: 0; margin:0;line-height:200%;}
+ul {list-style-type:none;padding: 0; margin:0;line-height:2em;}
 
 #wrapper{margin:0px auto; width:900px;
 background-color: white; 
@@ -197,7 +197,7 @@ animation: fadein 0.5s;
 
 #dropMenu-content{z-index:5;animation: fadein 1.5s;}
 
-#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:130%;text-align:left;}
+#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:1.3em;text-align:left;}
 
 /*#dropMenu-content a:hover {background-color: #f1f1f1;}*/
 
