--- a/css/style-error.css
+++ b/css/style-error.css
@@ -5,8 +5,8 @@ body{font-size:16px;background-color: #c2c4d8; }
 
 #content {width:80%;margin:0 auto;border:0.1 solid black;padding:2em;box-shadow: 0 0.5em 1em 0 rgba(0,0,0,0.2);background-color: white;  }
 
-h4 {margin:2em 0 2Sem 0;text-align:center; padding:0;
-            font-size:2em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+h4 {margin:2em 0 2em 0;text-align:center; padding:0;
+            font-size:3em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:italic; line-height:1.2em;}
 
 h6 {margin:0 0 0.5em 0;padding:0.5em;
