--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html{font-size:90%;} 
-@media only screen and (max-width:900px){html{font-size: 120%;}}
+@media only screen and (max-width:900px),(pointer:none),(pointer:coarse){html{font-size: 120%;}}
 
 body{background-color: #c2c4d8;font-size:16px;padding:0;margin:0;}
 
@@ -13,7 +13,7 @@ h1 {
 h2 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
             font-size:2em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:bold;line-height:1.2em;}
-@media only screen and (max-width:900px){h2{font-size:2.5em;line-height:2em;}}	
+@media only screen and (max-width:900px),(pointer:none),(pointer:coarse){h2{font-size:2.5em;line-height:2em;}}	
 			
 h3 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
             font-size:1.5em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
@@ -27,7 +27,7 @@ h5 {margin:0 0 0.5em 0;text-align:center; padding:0;
             font-size:1.3em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:italic; line-height:1.2em;
 			text-align:center;}
-@media only screen and (max-width:900px){h5{font-size:1.5em;line-height:2em;}}	
+@media only screen and (max-width:900px),(pointer:none),(pointer:coarse){h5{font-size:1.5em;line-height:2em;}}	
 	
 p {margin:0 0 0 0;text-align:center; padding:0 0;
             font-size:1.2em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
@@ -36,7 +36,7 @@ p {margin:0 0 0 0;text-align:center; padding:0 0;
 			text-justify: auto;
 			}
 			
-@media only screen and (max-width:900px){p{line-height:2em;}}
+@media only screen and (max-width:900px),(pointer:none),(pointer:coarse){p{line-height:2em;}}
 
 
 strong{font-weight:bold;font-size:1.5em;}
