--- a/css/style-responseHttp.css
+++ b/css/style-responseHttp.css
@@ -8,4 +8,4 @@
 background-color: black;width:85%;
 font-family: Consolas, Georgia, "Times New Roman", Times, serif;font-weight:italic; color: white; padding:20px 20px 20px 20px;}
 				
-#responseContainer p {line-height:1.2em;text-align:center;	z-index:7;padding:20px;}
+#responseContainer p {text-align:center;	z-index:7;padding:20px;}
