--- a/css/style-textbox.css
+++ b/css/style-textbox.css
@@ -1,6 +1,5 @@
 #firstPost {margin:1.2em auto;padding:1.2em;}
-@media only screen and (max-width:900px),(pointer:none),(pointer:coarse){
-#firstPost {margin:1.2em 0.5;padding:0;}}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){#firstPost {margin:1.2em 0.5;padding:0;}}
 
 .textBox{border :2px gray solid;
 border-radius:1.2em;padding:1.2em 1.2em;
@@ -8,11 +7,13 @@ margin:0 auto 3.6em auto;}
 
 .textBox span img{display: inline;float:right;vertical-align:middle;max-height:50px;}
 
-.textBox a{color:dodgerblue;text-align:right;font-size:0.9em;}
+.textBox a{color:dodgerblue;text-align:right;font-size:0.9em !important;}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){.textBox a {font-size:1.1em !important;}}
 
 .textBox span a{display: inline;float:right;padding:0.2em;}
 
-.textBox p a{color:dodgerblue;text-align:right;font-size:0.9em;cursor: pointer;}
+.textBox p a{color:dodgerblue;text-align:right;font-size:0.9em !important;cursor: pointer;}
+/* @media only screen and (orientation:portrait),only screen and (max-width:900px){.textBox p a {font-size:1em !important;}} */
 
 .textBox p {margin:1.2em 0;}
 
