--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html{font-size:90%;} 
-@media only screen and (max-width:900px),(pointer:none),(pointer:coarse){html{font-size: 120%;}}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){html{font-size: 120%;}}
 
 body{background-color: #c2c4d8;font-size:16px;padding:0;margin:0;}
 
@@ -13,7 +13,7 @@ h1 {
 h2 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
             font-size:2em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:bold;line-height:1.2em;}
-@media only screen and (max-width:900px),(pointer:none),(pointer:coarse){h2{font-size:2.5em;line-height:2em;}}	
+@media only screen and (orientation:portrait),only screen and (max-width:900px){h2{font-size:2.5em !important;line-height:2em !important;}}	
 			
 h3 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
             font-size:1.5em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
@@ -27,32 +27,33 @@ h5 {margin:0 0 0.5em 0;text-align:center; padding:0;
             font-size:1.3em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:italic; line-height:1.2em;
 			text-align:center;}
-@media only screen and (max-width:900px),(pointer:none),(pointer:coarse){h5{font-size:1.5em;line-height:2em;}}	
+@media only screen and (orientation:portrait),only screen and (max-width:900px){h5{font-size:1.5em !important;line-height:2em !important;}}	
 	
 p {margin:0 0 0 0;text-align:center; padding:0 0;
-            font-size:1.2em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-            font-weight:normal;line-height:1.2em;
+            font-size:1.2em !important; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-weight:normal;line-height:1.2em !important;
 			text-align: justify;
 			text-justify: auto;
 			}
 			
-@media only screen and (max-width:900px),(pointer:none),(pointer:coarse){p{line-height:2em;}}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){p{line-height:2em !important;}}
 
 
-strong{font-weight:bold;font-size:1.5em;}
+strong{font-weight:bold;font-size:1.5em !important;}
 
 div{
 	text-align: justify;
 	text-justify: auto;
 }
 	
-a {text-decoration:none;font-weight:italic;font-size:1.62em;line-height:1.2em;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
+a {text-decoration:none;font-weight:italic;font-size:1.62em;line-height:1.2em !important;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){a{line-height:2em !important;}}
 
 a:link {color:black}
 
 a:visited {color:black}
 
-ul {list-style-type:none;padding: 0; margin:0;line-height:2em;}
+ul {list-style-type:none;padding: 0; margin:0;line-height:2em !important;}
 
 #wrapper{margin:0px auto; width:900px;
 background-color: white; 
@@ -84,6 +85,7 @@ min-width:500px;
 .menuButton{border-radius:50%;border:0.3em outset rgba(255,215,0,0.3);}
 
 .notificationBox {
+	max-width:750px;
 	z-index:99;
 	border-radius:0.5em;border: 2px solid #f3f3f3;
 	background-color:dodgerblue;
@@ -99,8 +101,9 @@ min-width:500px;
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
 	}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){.notificationBox {max-width:550px;}}
 	
-.notificationBox p{font-size:1em;}
+.notificationBox p{font-size:1em !important;}
 
 .menuButton {color:black;z-index:5;display:inline-block; padding:0 0 0 0;background-color:white;
 position:relative;top:5px;}
@@ -204,7 +207,7 @@ animation: fadein 0.5s;
 
 #dropMenu-content{z-index:5;animation: fadein 1.5s;}
 
-#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:1.3em;text-align:left;}
+#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:1.3em !important;text-align:left;}
 
 /*#dropMenu-content a:hover {background-color: #f1f1f1;}*/
 
@@ -243,7 +246,8 @@ animation: fadein 0.5s;
 		 bottom:4em;padding:2em;
 		 margin:4em auto;
          width:100%;text-align:center;}
-#footer p{font-size:0.8em;font-weight:italic;text-align:center;}
+#footer p{font-size:0.8em !important;font-weight:italic;text-align:center;}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){#footer p{font-size:1em !important;}}
 
 .greenPulse {
   -webkit-animation-name: greenpulse; /* Safari 4.0 - 8.0 */
@@ -391,7 +395,6 @@ animation: fadein 0.5s;
 	padding:0;
 	line-height:10em;
 	text-align:center;
-	/* font-size:2em; */
 	align-content: center;
 	border-radius:50%;
 	position:fixed;
