--- a/css/style-arrow.css
+++ b/css/style-arrow.css
@@ -7,7 +7,7 @@
 }
 @media only screen and (orientation:portrait),only screen and (max-width:900px){#arrowDropTextWrapper{width:100%;margin:0 1em;}}
 
-#arrowDropTextWrapper h5{margin:0;font-size:1.5em;font-weight:normal;}
+#arrowDropTextWrapper h5{margin:0;font-weight:normal;}
 
 .hiddenText{display:none;background-color:white;
 padding:2em;margin:1em 2em 0 1em;
@@ -24,7 +24,6 @@ box-shadow:0 0 0.5em dodgerblue;
 .arrowOuter p{
 	/* text-align:center; */
 	/* font-style: italic; */
-	font-size:1.1em;
 	color:black;
 }
 
