--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,61 @@
-html{font-size:90%;} 
+html{font-size:100%;} 
 @media only screen and (orientation:portrait),only screen and (max-width:900px){html{font-size: 120%;}}
 
-body{background-color: #c2c4d8;font-size:16px;padding:0;margin:0;}
+body{background-color: #c2c4d8;padding:0;margin:0;}
 
 h1 {
     font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-    font-size: 2.5em;
+    font-size: 2.5rem;
 	text-align:center;
-	border-bottom :1px gray solid; line-height:1.2em;
+	border-bottom :1px gray solid; 
 }
+@media only screen and (orientation:portrait),only screen and (max-width:900px){h2{font-size:3rem !important;}}	
 
 h2 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
-            font-size:2em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-            font-weight:bold;line-height:1.2em;}
-@media only screen and (orientation:portrait),only screen and (max-width:900px){h2{font-size:2.5em !important;line-height:2em !important;}}	
+            font-size:2rem; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-weight:bold;}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){h2{font-size:2.5rem !important;}}	
 			
-h3 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
-            font-size:1.5em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-            font-weight:normal;line-height:1.2em;}
+h3 {margin:0 0 0.5em 0;text-align:center;
+            font-size:1.5rem; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-weight:normal;}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){h3{font-size:2rem !important;}}	
 
 h4 {margin:1em 0 0.5em 0;text-align:center; padding:0;
-            font-size:1.35em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-            font-weight:italic; line-height:1.2em;}
+            font-size:1.35rem; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-weight:italic;}
 
 h5 {margin:0 0 0.5em 0;text-align:center; padding:0;
-            font-size:1.3em; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-            font-weight:italic; line-height:1.2em;
+            font-size:1.3rem; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-weight:italic;
 			text-align:center;}
-@media only screen and (orientation:portrait),only screen and (max-width:900px){h5{font-size:1.5em !important;line-height:2em !important;}}	
+@media only screen and (orientation:portrait),only screen and (max-width:900px){h5{font-size:1.5rem !important;}}	
 	
 p {margin:0 0 0 0;text-align:center; padding:0 0;
-            font-size:1.2em !important; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-            font-weight:normal;line-height:1.2em !important;
+            font-size:1.1rem !important; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-weight:normal;line-height:1.5rem !important;
 			text-align: justify;
 			text-justify: auto;
 			}
 			
-@media only screen and (orientation:portrait),only screen and (max-width:900px){p{line-height:2em !important;}}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){p{font-size:1.2rem !important; line-height:2rem !important;}}
 
 
-strong{font-weight:bold;font-size:1.5em !important;}
+strong{font-weight:bold;font-size:1.5rem !important;}
 
 div{
 	text-align: justify;
 	text-justify: auto;
 }
 	
-a {text-decoration:none;font-weight:italic;font-size:1.62em;line-height:1.2em !important;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
-@media only screen and (orientation:portrait),only screen and (max-width:900px){a{line-height:2em !important;}}
+a {text-decoration:none;font-weight:italic;font-size:1.62rem;line-height:1.2rem !important;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){a{line-height:2rem !important;}}
 
 a:link {color:black}
 
 a:visited {color:black}
 
-ul {list-style-type:none;padding: 0; margin:0;line-height:2em !important;}
+ul {list-style-type:none;padding: 0; margin:0;line-height:2rem !important;}
 
 #wrapper{margin:0px auto; width:900px;
 background-color: white; 
@@ -103,7 +105,7 @@ min-width:500px;
 	}
 @media only screen and (orientation:portrait),only screen and (max-width:900px){.notificationBox {max-width:550px;}}
 	
-.notificationBox p{font-size:1em !important;}
+.notificationBox p{font-size:1rem !important;}
 
 .menuButton {color:black;z-index:5;display:inline-block; padding:0 0 0 0;background-color:white;
 position:relative;top:5px;}
@@ -207,7 +209,7 @@ animation: fadein 0.5s;
 
 #dropMenu-content{z-index:5;animation: fadein 1.5s;}
 
-#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:1.3em !important;text-align:left;}
+#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:1.3rem !important;text-align:left;}
 
 /*#dropMenu-content a:hover {background-color: #f1f1f1;}*/
 
@@ -246,8 +248,8 @@ animation: fadein 0.5s;
 		 bottom:4em;padding:2em;
 		 margin:4em auto;
          width:100%;text-align:center;}
-#footer p{font-size:0.8em !important;font-weight:italic;text-align:center;}
-@media only screen and (orientation:portrait),only screen and (max-width:900px){#footer p{font-size:1em !important;}}
+#footer p{font-size:0.8rem !important;font-weight:italic;text-align:center;}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){#footer p{font-size:1rem !important;}}
 
 .greenPulse {
   -webkit-animation-name: greenpulse; /* Safari 4.0 - 8.0 */
@@ -393,7 +395,7 @@ animation: fadein 0.5s;
 	width:10em;
 	margin:0;
 	padding:0;
-	line-height:10em;
+	line-height:10rem;
 	text-align:center;
 	align-content: center;
 	border-radius:50%;
