--- a/css/style.css
+++ b/css/style.css
@@ -5,31 +5,27 @@ body{background-color: #c2c4d8;padding:0;margin:0;}
 
 h1 {
     font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-    font-size: 2.5rem;
+    font-size: 2.5rem !important; 
 	text-align:center;
 	border-bottom :1px gray solid; 
 }
-@media only screen and (orientation:portrait),only screen and (max-width:900px){h2{font-size:3rem !important;}}	
 
 h2 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
-            font-size:2rem; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-size:2rem !important; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:bold;}
-@media only screen and (orientation:portrait),only screen and (max-width:900px){h2{font-size:2.5rem !important;}}	
 			
 h3 {margin:0 0 0.5em 0;text-align:center;
             font-size:1.5rem; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:normal;}
-@media only screen and (orientation:portrait),only screen and (max-width:900px){h3{font-size:2rem !important;}}	
 
 h4 {margin:1em 0 0.5em 0;text-align:center; padding:0;
-            font-size:1.35rem; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-size:1.35rem !important; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:italic;}
 
 h5 {margin:0 0 0.5em 0;text-align:center; padding:0;
             font-size:1.3rem; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:italic;
 			text-align:center;}
-@media only screen and (orientation:portrait),only screen and (max-width:900px){h5{font-size:1.5rem !important;}}	
 	
 p {margin:0 0 0 0;text-align:center; padding:0 0;
             font-size:1.1rem !important; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
@@ -38,8 +34,6 @@ p {margin:0 0 0 0;text-align:center; padding:0 0;
 			text-justify: auto;
 			}
 			
-@media only screen and (orientation:portrait),only screen and (max-width:900px){p{font-size:1.2rem !important; line-height:2rem !important;}}
-
 
 strong{font-weight:bold;font-size:1.5rem !important;}
 
@@ -49,7 +43,7 @@ div{
 }
 	
 a {text-decoration:none;font-weight:italic;font-size:1.62rem;line-height:1.2rem !important;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
-@media only screen and (orientation:portrait),only screen and (max-width:900px){a{line-height:2rem !important;}}
+/* @media only screen and (orientation:portrait),only screen and (max-width:900px){a{line-height:2rem !important;}} */
 
 a:link {color:black}
 
@@ -249,7 +243,7 @@ animation: fadein 0.5s;
 		 margin:4em auto;
          width:100%;text-align:center;}
 #footer p{font-size:0.8rem !important;font-weight:italic;text-align:center;}
-@media only screen and (orientation:portrait),only screen and (max-width:900px){#footer p{font-size:1rem !important;}}
+/* @media only screen and (orientation:portrait),only screen and (max-width:900px){#footer p{font-size:1rem !important;}} */
 
 .greenPulse {
   -webkit-animation-name: greenpulse; /* Safari 4.0 - 8.0 */
