--- a/css/style-textbox.css
+++ b/css/style-textbox.css
@@ -13,6 +13,7 @@ margin:0 auto 3.6em auto;}
 .textBox span a{display: inline;float:right;padding:0.2em;}
 
 .textBox p a{color:dodgerblue;text-align:right;font-size:0.9rem !important;cursor: pointer;}
+/*@media only screen and (orientation:portrait),only screen and (max-width:900px){.textBox p a {font-size:1.1rem !important;}}*/
 
 .textBox p {margin:1rem 0;}
 
