--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html{font-size:100%;} 
-@media only screen and (orientation:portrait),only screen and (max-width:900px){html{font-size: 120%;}}
+@media only screen and (orientation:portrait),only screen and (max-width:900px){html{font-size: 125%;}}
 
 body{background-color: #c2c4d8;padding:0;margin:0;}
 
@@ -33,7 +33,9 @@ p {margin:0 0 0 0;text-align:center; padding:0 0;
 			text-align: justify;
 			text-justify: auto;
 			}
-			
+
+@media only screen and (orientation:portrait),only screen and (max-width:900px){p{line-height:1.8rem;}}
+
 
 strong{font-weight:bold;font-size:1.5rem !important;}
 
