--- a/css/style-textbox.css
+++ b/css/style-textbox.css
@@ -1,3 +1,4 @@
+/*Ajout commentaire*/
 #firstPost {margin:1.2em auto;padding:1.2em;}
 @media only screen and (orientation:portrait),only screen and (max-width:900px){#firstPost {margin:1.2em 0.5;padding:0;}}
 
